compiling_error.txt
/Users/akanshajain/WORK/C/Ques 3.c:31:12: error: use of undeclared identifier 'b1'
   strcpy( b1.title, "C Programming");
           ^
/Users/akanshajain/WORK/C/Ques 3.c:31:12: error: use of undeclared identifier 'b1'
/Users/akanshajain/WORK/C/Ques 3.c:32:12: error: use of undeclared identifier 'b1'
   strcpy( b1.author, "Nuha Ali");
           ^
/Users/akanshajain/WORK/C/Ques 3.c:32:12: error: use of undeclared identifier 'b1'
/Users/akanshajain/WORK/C/Ques 3.c:33:12: error: use of undeclared identifier 'b1'
   strcpy( b1.subject, "C Programming Tutorial");
           ^
/Users/akanshajain/WORK/C/Ques 3.c:33:12: error: use of undeclared identifier 'b1'
/Users/akanshajain/WORK/C/Ques 3.c:34:4: error: use of undeclared identifier 'b1'
   b1.book_id = 6495407;
   ^
/Users/akanshajain/WORK/C/Ques 3.c:37:12: error: use of undeclared identifier 'b2'
   strcpy( b2.title, "Telecom Billing");
           ^
/Users/akanshajain/WORK/C/Ques 3.c:37:12: error: use of undeclared identifier 'b2'
/Users/akanshajain/WORK/C/Ques 3.c:38:12: error: use of undeclared identifier 'b2'
   strcpy( b2.author, "Zara Ali");
           ^
/Users/akanshajain/WORK/C/Ques 3.c:38:12: error: use of undeclared identifier 'b2'
/Users/akanshajain/WORK/C/Ques 3.c:39:12: error: use of undeclared identifier 'b2'
   strcpy( b2.subject, "Telecom Billing Tutorial");
           ^
/Users/akanshajain/WORK/C/Ques 3.c:39:12: error: use of undeclared identifier 'b2'
/Users/akanshajain/WORK/C/Ques 3.c:40:4: error: use of undeclared identifier 'b2'
   b2.book_id = 6495700;
   ^
/Users/akanshajain/WORK/C/Ques 3.c:43:15: error: use of undeclared identifier 'b1'
   printBook( b1 );
              ^
/Users/akanshajain/WORK/C/Ques 3.c:47:15: error: use of undeclared identifier 'b2'
   printBook( b2 );
              ^
16 errors generated.
